--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -12,6 +12,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground"
+    android:id="@+id/card"
     app:cardElevation="@dimen/small_spacing"
     app:cardMaxElevation="@dimen/card_elevation"
     app:contentPadding="@dimen/small_spacing">
@@ -21,25 +22,15 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/countView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?textAppearanceHeadline5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_goneMarginTop="@dimen/small_spacing"
-            tools:text="100" />
-
-        <TextView
             android:id="@+id/title"
             android:layout_width="@dimen/auto_size"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/small_spacing"
             android:textAppearance="?textAppearanceHeadline5"
-            app:layout_constraintBottom_toBottomOf="@+id/countView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/countView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_goneMarginTop="@dimen/small_spacing"
             tools:text="@tools:sample/lorem" />
 
