--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
     app:startDestination="@id/searchFragment">
 
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.ksuta.finderusertest.screens.search.SearchFragment"
-        android:label="SearchFragment" />
+        android:label="SearchFragment"
+        tools:layout="@layout/fragment_search">
+        <action
+            android:id="@+id/action_searchFragment_to_detailUserFragment"
+            app:destination="@id/detailUserFragment">
+            <argument
+                android:name="idArg"
+                app:argType="integer"
+                android:defaultValue="0" />
+        </action>
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailUserFragment"
+        android:name="com.ksuta.finderusertest.screens.details.DetailUserFragment"
+        android:label="DetailUserFragment"
+        tools:layout="@layout/fragment_detail" >
+        <argument
+            android:name="idArg"
+            app:argType="integer"
+            android:defaultValue="0" />
+    </fragment>
+
 </navigation>
